added new security group for ec2 instances

--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,6 @@
     <h1>Hello, World!</h1>
     <p>This is a simple example website hosted on AWS using Terraform.</p>
     <br>
-    <img src="Architecture diagram.jpg" alt="Architecture Diagram" style="max-width: 100%; height: auto;">
+    <img src="diagram.jpg" alt="Architecture Diagram" style="max-width: 100%; height: auto;">
 </body>
 </html>
