added new security group for ec2 instances

--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
-    <p>This is a simple example website hosted on AWS using Terraform.</p>
+    <p>This is a simple example website hosted on AWS, implemented using Terraform.</p>
     <br>
     <img src="diagram.jpg" alt="Architecture Diagram" style="max-width: 100%; height: auto;">
 </body>
